--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/scroll.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/index.js"></script>
+    <script src="main.js"></script>
+    <script src="index.js"></script>
 
 </html>
