--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <img src="assets/img/img1.png" alt="card image" class="card__img">
 
                         <h1 class="card__title">
-                            <span id="suhu"></span>
+                            <span id="suhu"></span>&#176;C
                         </h1>
                         <p class="card__description">Suhu Ruangan</p>
                     </div>
