--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <article class="card__article">
                     <div class="card__data">
-                        <img src="assets/img/img1.png" alt="card image" class="card__img">
+                        <img src="assets/img/img3.png" alt="card image" class="card__img">
 
                         <h1 class="card__title">
                             <span id="kel_udara"></span>%
@@ -84,7 +84,7 @@
 
                 <article class="card__article">
                     <div class="card__data">
-                        <img src="assets/img/img1.png" alt="card image" class="card__img">
+                        <img src="assets/img/img3.png" alt="card image" class="card__img">
 
                         <h1 class="card__title">
                             <span id="kel_tanah"></span>%
@@ -106,12 +106,13 @@
 
                 <article class="card__article">
                     <div class="card__data">
-                        <img src="assets/img/img1.png" alt="card image" class="card__img">
+                        <img src="assets/img/img2.png" alt="card image" class="card__img">
 
                         <h1 class="card__title">
                             <span id="ph"></span>
+                            <span id="indikator"></span>
                         </h1>
-                        <p class="card__description">PH Tanah</p>
+                        <p class="card__description">pH Tanah</p>
                     </div>
 
                     <div class="card__shapes">
