--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="card__container">
                 <article class="card__article">
                     <div class="card__data">
-                        <img src="assets/img/img1.png" alt="card image" class="card__img">
+                        <img src="assets/img/suhu.png" alt="card image" class="card__img">
 
                         <h1 class="card__title">
                             <span id="suhu"></span>&#176;C
@@ -62,7 +62,7 @@
 
                 <article class="card__article">
                     <div class="card__data">
-                        <img src="assets/img/img3.png" alt="card image" class="card__img">
+                        <img src="assets/img/keludara.png" alt="card image" class="card__img">
 
                         <h1 class="card__title">
                             <span id="kel_udara"></span>%
@@ -84,7 +84,7 @@
 
                 <article class="card__article">
                     <div class="card__data">
-                        <img src="assets/img/img3.png" alt="card image" class="card__img">
+                        <img src="assets/img/keltanah.png" alt="card image" class="card__img">
 
                         <h1 class="card__title">
                             <span id="kel_tanah"></span>%
@@ -106,7 +106,7 @@
 
                 <article class="card__article">
                     <div class="card__data">
-                        <img src="assets/img/img2.png" alt="card image" class="card__img">
+                        <img src="assets/img/ph.png" alt="card image" class="card__img">
 
                         <h1 class="card__title">
                             <span id="ph"></span>
