--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <!--=============== FAVICON ===============-->
         <link rel="shortcut icon" href="assets/img/Innovillage.png" type="image/x-icon">
 
+        <!--=============== ICONS ===============-->
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -22,19 +27,16 @@
                                 <!-- Insert your image, according to the example size of the portfolio -->
                                 <img src="assets/img/Innovillage.png" alt="">
                             </div>
+                            <ul class="profil__yt">
+                                <a style="text-decoration:none" href="https://www.youtube.com/@theomnipotence1198" target="_blank" class="profile__social-link_yt">
+                                    <i class="ri-youtube-line"></i>
+                                </a>
+                            </ul>
                         </div>
-    
+                        <br>
                         <h2 class="profile__name">THE OMNIPOTENCE</h2>
                         <h3 class="profile__profession">Automatic Garden Watering</h3>
     
-                        <ul class="profile__social">
-                            <a href="https://www.instagram.com/wizmanrofiansyah/" target="_blank" class="profile__social-link">
-                                <i class="ri-instagram-line"></i>
-                            </a>
-                            <a href="https://www.youtube.com/channel/UCvX_aHBSAhJqsYUwfitQgeQ" target="_blank" class="profile__social-link">
-                                <i class="ri-youtube-line"></i>
-                            </a>
-                        </ul>
                     </div>
             </header>
             <div class="card__container">
@@ -128,6 +130,18 @@
                     </div>
                 </article>
             </div>
+            <br>
+            <ul class="profile__ig">
+                <a style="text-decoration:none" href="https://www.instagram.com/wizmanrofiansyah/" target="_blank" class="profile__social-link">
+                    <i class="ri-instagram-line"></i> Wizman Rofiansyah
+                </a>
+                <a style="text-decoration:none" href="https://www.instagram.com/irsyadhelmy/" target="_blank" class="profile__social-link">
+                    <i class="ri-instagram-line"></i> Moh. Irsyad Helmy
+                </a>
+                <a style="text-decoration:none" href="https://www.instagram.com/arielchandraa/" target="_blank" class="profile__social-link">
+                    <i class="ri-instagram-line"></i> Moh. Ariel Chandra W.
+                </a>
+            </ul>
         </div>
     </body>
 
