--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
             <br>
             <ul class="profile__ig">
                 <a style="text-decoration:none" href="https://www.instagram.com/wizmanrofiansyah/" target="_blank" class="profile__social-link">
-                    <i class="ri-instagram-line"></i> Wizman Rofiansyah
+                    <i class="ri-instagram-line"></i> Wizman
                 </a>
                 <a style="text-decoration:none" href="https://www.instagram.com/irsyadhelmy/" target="_blank" class="profile__social-link">
-                    <i class="ri-instagram-line"></i> Moh. Irsyad Helmy
+                    <i class="ri-instagram-line"></i> Helmy
                 </a>
                 <a style="text-decoration:none" href="https://www.instagram.com/arielchandraa/" target="_blank" class="profile__social-link">
-                    <i class="ri-instagram-line"></i> Moh. Ariel Chandra W.
+                    <i class="ri-instagram-line"></i> Ariel
                 </a>
             </ul>
         </div>
